[gd_scene load_steps=3 format=3 uid="uid://startscreen"]
[ext_resource type="Script" path="res://scripts/StartScreen.gd" id=1]
[node name="StartScreen" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
alignment = 1
spacing = 20

[node name="Title" type="Label" parent="VBox"]
custom_fonts/font = ExtResource(2)
text = "TAP OR DIE"
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)

[node name="Instructions" type="Label" parent="VBox"]
custom_fonts/font = ExtResource(3)
text = "Tap or press Spacebar only when the correct symbol appears.\nWrong tap and you die!"
theme_override_colors/font_color = Color(1,1,1,1)
align = 1

[node name="PlayerNameContainer" type="HBoxContainer" parent="VBox"]
custom_constants/separation = 10

[node name="LabelName" type="Label" parent="VBox/PlayerNameContainer"]
text = "Player Name:"
custom_fonts/font = ExtResource(3)
theme_override_colors/font_color = Color(1,1,1,1)

[node name="PlayerNameInput" type="LineEdit" parent="VBox/PlayerNameContainer"]
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Enter your name"
autoselect_when_focus = true

[node name="HighScoreLabel" type="Label" parent="VBox"]
custom_fonts/font = ExtResource(3)
text = "High Score: 0"
theme_override_colors/font_color = Color(1,1,0,1)
align = 1
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="VBox"]
text = "Start Game"
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="VBox"]
text = "Close Game"
size_flags_horizontal = 3

[ext_resource type="Font" path="res://assets/fonts/TitleFont.ttf" id=2]
[ext_resource type="Font" path="res://assets/fonts/RegularFont.ttf" id=3]